@@ -8,7 +8,6 @@ import femcum.modernfloyd.clients.event.impl.other.WorldChangeEvent;
 import femcum.modernfloyd.clients.module.impl.combat.KillAura;
 import femcum.modernfloyd.clients.util.Accessor;
 import femcum.modernfloyd.clients.util.player.PlayerUtil;
-import net.minecraft.entity.Entity;
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.entity.monster.EntityMob;
 import net.minecraft.entity.passive.EntityAnimal;
@@ -18,28 +17,26 @@ import rip.vantage.commons.util.time.StopWatch;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 public class TargetComponent extends Component implements Accessor {
-
-    private static final HashMap<Class<?>, List<EntityLivingBase>> targetMap = new HashMap<>();
-    private static final HashMap<Class<?>, Integer> entityAmountMap = new HashMap<>();
-    private static final HashMap<Class<?>, StopWatch> timerMap = new HashMap<>();
-    private static final HashMap<Integer, Class<?>> queuedMap = new HashMap<>();
+    private static final Map<Class<?>, List<EntityLivingBase>> targetMap = new HashMap<>();
+    private static final Map<Class<?>, Integer> entityAmountMap = new HashMap<>();
+    private static final Map<Class<?>, StopWatch> timerMap = new HashMap<>();
+    private static final Map<Integer, Class<?>> queuedMap = new HashMap<>();
     private static int id;
-    private static KillAura killAura;
-    private static boolean forceUpdate;
+    private static final KillAura killAura = Floyd.INSTANCE.getModuleManager().get(KillAura.class);
 
     public static void forceUpdate() {
-        forceUpdate = true;
-    }
-
-    @EventLink
-    public final Listener<WorldChangeEvent> onWorldChange = event -> {
         targetMap.clear();
         entityAmountMap.clear();
         timerMap.clear();
         queuedMap.clear();
+    }
+
+    @EventLink
+    public final Listener<WorldChangeEvent> onWorldChange = event -> {
+        forceUpdate();
         id = 0;
     };
 
@@ -48,71 +45,74 @@ public class TargetComponent extends Component implements Accessor {
     }
 
     public static List<EntityLivingBase> getTargets(double range) {
-        if (killAura == null) {
-            killAura = Floyd.INSTANCE.getModuleManager().get(KillAura.class);
-        }
-
-        return getTargets(killAura.getClass(), killAura.player.getValue(), killAura.invisibles.getValue(), killAura.animals.getValue(), killAura.mobs.getValue(), killAura.teams.getValue()).stream().filter(entity -> mc.thePlayer.getDistanceToEntity(entity) <= range).collect(Collectors.toList());
+        return getTargets(killAura.getClass(), killAura.player.getValue(), killAura.invisibles.getValue(),
+                killAura.animals.getValue(), killAura.mobs.getValue(), killAura.teams.getValue())
+                .stream()
+                .filter(entity -> mc.thePlayer.getDistanceToEntity(entity) <= range)
+                .toList();
     }
 
-    public static List<EntityLivingBase> getTargets(Class<?> module, double range, boolean players, boolean invisibles, boolean animals, boolean mobs, boolean teams) {
-        return getTargets(module, players, invisibles, animals, mobs, teams).stream().filter(entity -> mc.thePlayer.getDistanceToEntity(entity) <= range).collect(Collectors.toList());
+    public static List<EntityLivingBase> getTargets(Class<?> module, double range, boolean players, boolean invisible,
+                                                    boolean animals, boolean mobs, boolean teams) {
+        return getTargets(module, players, invisible, animals, mobs, teams)
+                .stream()
+                .filter(entity -> mc.thePlayer.getDistanceToEntity(entity) <= range)
+                .toList();
     }
 
     public static List<EntityLivingBase> getTargets() {
-        if (killAura == null) {
-            killAura = Floyd.INSTANCE.getModuleManager().get(KillAura.class);
-        }
-
-        return getTargets(killAura.getClass(), killAura.player.getValue(), killAura.invisibles.getValue(), killAura.animals.getValue(), killAura.mobs.getValue(), killAura.teams.getValue());
+        return getTargets(killAura.getClass(), killAura.player.getValue(), killAura.invisibles.getValue(),
+                killAura.animals.getValue(), killAura.mobs.getValue(), killAura.teams.getValue());
     }
 
-    public static List<EntityLivingBase> getTargets(Class<?> module, boolean players, boolean invisibles, boolean animals, boolean mobs, boolean teams) {
-        if (queuedMap.containsValue(module) && !timerMap.get(module).finished(5000L) && !forceUpdate) {
-            return targetMap.getOrDefault(module, new ArrayList<>()).stream().filter(entity -> mc.theWorld.loadedEntityList.contains(entity)).collect(Collectors.toList());
+    public static List<EntityLivingBase> getTargets(Class<?> module, boolean players, boolean invisible,
+                                                    boolean animals, boolean mobs, boolean teams) {
+        // Return cached targets if they exist, are recent (within 5 seconds), and the world hasn't changed significantly
+        if (queuedMap.containsValue(module) && !timerMap.get(module).finished(5000L)) {
+            return targetMap.getOrDefault(module, new ArrayList<>())
+                    .stream()
+                    .filter(mc.theWorld.loadedEntityList::contains)
+                    .toList();
         }
 
+        // Update targets if cache is missing, outdated, or world entity count has changed
         if (!targetMap.containsKey(module) ||
-                timerMap.containsKey(module) && (timerMap.get(module).finished(5000L) ||
-                        entityAmountMap.containsKey(module) && entityAmountMap.get(module) != mc.theWorld.loadedEntityList.size() && timerMap.get(module).finished(1000L)) || forceUpdate) {
+                timerMap.getOrDefault(module, new StopWatch()).finished(5000L) ||
+                (entityAmountMap.containsKey(module) &&
+                        entityAmountMap.get(module) != mc.theWorld.loadedEntityList.size() &&
+                        timerMap.getOrDefault(module, new StopWatch()).finished(1000L))) {
             List<EntityLivingBase> startingTargets = mc.theWorld.loadedEntityList
                     .stream()
-
-                    .filter(entity -> entity instanceof EntityLivingBase && entity != mc.getRenderViewEntity() && !UserFriendAndTargetComponent.isFriend(entity.getCommandSenderName()))
-
-                    .map(entity -> ((EntityLivingBase) entity))
-
+                    .filter(entity -> entity instanceof EntityLivingBase &&
+                            entity != mc.getRenderViewEntity() &&
+                            !UserFriendAndTargetComponent.isFriend(entity.getCommandSenderName()))
+                    .map(EntityLivingBase.class::cast)
                     .filter(entity -> !Floyd.INSTANCE.getBotManager().contains(entity))
-
+                    .filter(entity -> invisible || !entity.isInvisible())
                     .filter(entity -> {
                         if (entity instanceof EntityPlayer) {
-                            if (players) {
-                                return (!PlayerUtil.sameTeam(entity) || teams);
-                            } else {
-                                return false;
-                            }
+                            return players && (!PlayerUtil.sameTeam(entity) || teams);
                         }
-
-                        return entity instanceof EntityAnimal || entity instanceof EntityMob;
+                        if (entity instanceof EntityAnimal) {
+                            return animals;
+                        }
+                        if (entity instanceof EntityMob) {
+                            return mobs;
+                        }
+                        return false;
                     })
+                    .toList();
 
-                    .collect(Collectors.toList());
-
-            if (startingTargets.isEmpty()) {
-                return new ArrayList<>();
-            }
-
-            List<Entity> entityList = new ArrayList<>();
-            //startingTargets.forEach(entity -> entityList.add(new Entity(entity.getEntityId(), entity instanceof EntityPlayer ? 0 : entity instanceof EntityAnimal ? 1 : 2, entity.isInvisible())));
-
-            id++;
-
+            // Update caches
+            targetMap.put(module, startingTargets);
             entityAmountMap.put(module, mc.theWorld.loadedEntityList.size());
             timerMap.put(module, new StopWatch());
-            queuedMap.put(id, module);
+            queuedMap.put(id++, module);
         }
 
-        forceUpdate = false;
-        return targetMap.getOrDefault(module, new ArrayList<>()).stream().filter(entity -> mc.theWorld.loadedEntityList.contains(entity)).collect(Collectors.toList());
+        return targetMap.getOrDefault(module, new ArrayList<>())
+                .stream()
+                .filter(mc.theWorld.loadedEntityList::contains)
+                .toList();
     }
 }
